# FreeRtosExamples

./: .gitignore  .install_gcc_arm_embedded_osx.sh  .travis.yml  CMakeLists.txt  README.md  SimplicityStudio.md
FreeRTOS/: FreeRTOSConfig.h  freertos.cmake
FreeRTOS/basic_io/: basic_io.c  readme.txt
bsp/: bsp.cmake  bsp.h  bsp_bcc.c  bsp_bcp.h  bsp_dk_3200.c  bsp_dk_3201.c  bsp_dk_bcreg_3200.h  bsp_dk_bcreg_3201.h  bsp_dk_leds.c  bsp_dk_mcuboard.c  bsp_stk.c  bsp_stk_leds.c  bsp_trace.c  bsp_trace.h
bsp/config/: bspconfig.h  caplesenseconfig.h  cpt007b_config.h  i2cspmconfig.h  segmentlcdconfig.h
device/: device.cmake
device/EFM32TG/Include/: efm32tg108f16.h  efm32tg108f32.h  efm32tg108f4.h  efm32tg108f8.h  efm32tg110f16.h  efm32tg110f32.h  efm32tg110f4.h  efm32tg110f8.h  efm32tg210f16.h  efm32tg210f32.h  efm32tg210f8.h  efm32tg222f16.h  efm32tg222f32.h  efm32tg222f8.h  efm32tg225f16.h  efm32tg225f32.h  efm32tg225f8.h  efm32tg230f16.h  efm32tg230f32.h  efm32tg230f8.h  efm32tg232f16.h  efm32tg232f32.h  efm32tg232f8.h  efm32tg822f16.h  efm32tg822f32.h  efm32tg822f8.h  efm32tg825f16.h  efm32tg825f32.h  efm32tg825f8.h  efm32tg840f16.h  efm32tg840f32.h  efm32tg840f8.h  efm32tg842f16.h  efm32tg842f32.h  efm32tg842f8.h  efm32tg_acmp.h  efm32tg_adc.h  efm32tg_aes.h  efm32tg_af_pins.h  efm32tg_af_ports.h  (+35 more)
device/EFM32TG/Source/: system_efm32tg.c
device/EFM32TG/Source/GCC/: efm32tg.ld  startup_efm32tg.S  startup_efm32tg.c
emdrv/: Changes-emdrv.txt  emdrv.cmake
emdrv/common/inc/: ecode.h
emdrv/config/: dmadrv_config.h  ezradiodrv_config.h  nvm_config.c  nvm_config.h  rtcdrv_config.h  spidrv_config.h  tempdrv_config.h  uartdrv_config.h  ustimer_config.h
emdrv/dmadrv/config/: dmadrv_config.h
emdrv/dmadrv/inc/: dmadrv.h
emdrv/dmadrv/src/: dmadrv.c
emdrv/ezradiodrv/common/inc/: ezradio_api_lib.h  ezradio_comm.h  ezradio_hal.h
emdrv/ezradiodrv/common/src/: ezradio_api_lib.c  ezradio_comm.c  ezradio_hal.c
emdrv/ezradiodrv/config/: ezradiodrv_config.h
emdrv/ezradiodrv/plugins/inc/: ezradio_auto_ack_plugin.h  ezradio_crcerror_plugin.h  ezradio_direct_receive_plugin.h  ezradio_direct_transmit_plugin.h  ezradio_plugin_manager.h  ezradio_pn9_plugin.h  ezradio_receive_plugin.h  ezradio_transmit_plugin.h  ezradio_unmod_carrier_plugin.h
emdrv/ezradiodrv/plugins/src/: ezradio_auto_ack_plugin.c  ezradio_crcerror_plugin.c  ezradio_direct_receive_plugin.c  ezradio_direct_transmit_plugin.c  ezradio_plugin_manager.c  ezradio_pn9_plugin.c  (+3 more)
emdrv/gpiointerrupt/inc/: gpiointerrupt.h
emdrv/gpiointerrupt/src/: gpiointerrupt.c
emdrv/nvm/config/: nvm_config.c  nvm_config.h
emdrv/nvm/inc/: nvm.h  nvm_hal.h
emdrv/nvm/src/: nvm.c  nvm_hal.c
emdrv/rtcdrv/config/: rtcdrv_config.h
emdrv/rtcdrv/inc/: rtcdriver.h
emdrv/rtcdrv/src/: rtcdriver.c
emdrv/sleep/inc/: sleep.h
emdrv/sleep/src/: sleep.c
emdrv/spidrv/config/: spidrv_config.h
emdrv/spidrv/inc/: spidrv.h
emdrv/spidrv/src/: spidrv.c
emdrv/tempdrv/config/: tempdrv_config.h
emdrv/tempdrv/inc/: tempdrv.h
emdrv/tempdrv/src/: tempdrv.c
emdrv/uartdrv/config/: uartdrv_config.h
emdrv/uartdrv/inc/: uartdrv.h
emdrv/uartdrv/src/: uartdrv.c
emdrv/ustimer/config/: ustimer_config.h
emdrv/ustimer/inc/: ustimer.h
emdrv/ustimer/src/: ustimer.c
source/: CMakeLists.txt
source/1_tasks/: CMakeLists.txt
source/1_tasks/1_creating_tasks/: CMakeLists.txt  main.c
source/1_tasks/2_using_the_task_parameter/: CMakeLists.txt  main.c
source/1_tasks/3_priorities/: CMakeLists.txt  low_power_tick_management.c  main.c
source/1_tasks/4_blocked_state/: CMakeLists.txt  main.c
source/1_tasks/5_task_delay_until/: CMakeLists.txt  main.c
source/1_tasks/6_combining_blocking_non_blocking/: CMakeLists.txt  main.c
source/1_tasks/7_idle_task_hook/: CMakeLists.txt  low_power_tick_management.c  main.c
source/1_tasks/8_changing_task_priority/: CMakeLists.txt  main.c
source/1_tasks/9_deleting_task/: CMakeLists.txt  main.c
source/2_queues/: CMakeLists.txt
source/2_queues/10_receiving_from_queue/: CMakeLists.txt  main.c
source/2_queues/11_sending_to_queue/: CMakeLists.txt  main.c
source/3_interrupts/: CMakeLists.txt
source/3_interrupts/12_binary_semaphore/: CMakeLists.txt  main.c
source/3_interrupts/13_counting_semaphore/: CMakeLists.txt  main.c
source/3_interrupts/14_queue_from_interrupt/: CMakeLists.txt  main.c
source/4_resources/: CMakeLists.txt
source/4_resources/14_mutex/: CMakeLists.txt  main.c
source/4_resources/16_gatekeeper_task/: CMakeLists.txt  low_power_tick_management.c  main.c
source/common/: common.cmake  print.c  print.h
toolchain/: arm-gcc.cmake
(+14 files in other folders)
