# Examples
add_subdirectory("1_creating_tasks")

add_subdirectory("2_using_the_task_parameter")

add_subdirectory("3_priorities")

add_subdirectory("4_blocked_state")

add_subdirectory("5_task_delay_until")

add_subdirectory("6_combining_blocking_non_blocking")

add_subdirectory("7_idle_task_hook")

add_subdirectory("8_changing_task_priority")

